--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <div class="container">
 
             <section id="topbar">
-                <div class="logo"><img src="temperary logo.jpg" alt="logo"></div>
+                <div class="logo"><img src="index_img/temperary logo.jpg" alt="logo"></div>
                 <div class="welcome"><h1>Welcome To qcFirst Course & Enroll System.</h1></div>
                 
             </section>
 
             <section id="leftbar">
                 <div class="sidebar">
-                    <header><img src="small Q.png" alt="samllQ"> Menu</header>
+                    <header><img src="index_img/small Q.png" alt="samllQ"> Menu</header>
                     <ul>
                         <li><a href="#"><i class="menu login-link"></i>Login/Sign-Up</a></li>
                         <li><a href="#"><i class="mebu home-link"></i>Home</a></li>
@@ -32,7 +32,7 @@
                     <div>Hi, Visitor.  </div>
                     <div>Today is : <span id="datetime"></span></div>
                 </div>
-                <img class="background" src="campus pic.jpg" alt="">
+                <img class="background" src="index_img/campus pic.jpg" alt="">
                     <div class="mainbar-container">
                         <h2>Announcement: </h2>
                         <div style="overflow-x:auto;">
