--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="sidebar">
                     <header><img src="index_img/small Q.png" alt="samllQ"> Menu</header>
                     <ul>
-                        <li><a href="#"><i class="menu login-link"></i>Login/Sign-Up</a></li>
+                        <li><a href="login&signup page/qcFirstLogin&SignupPage.html"><i class="menu login-link"></i>Login/Sign-Up</a></li>
                         <li><a href="#"><i class="mebu home-link"></i>Home</a></li>
                     </ul>
                 </div>    
