--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <header><img src="index_img/small Q.png" alt="samllQ"> Menu</header>
                     <ul>
                         <li><a href="login&signup page/qcFirstLogin&SignupPage.html"><i class="menu login-link"></i>Login/Sign-Up</a></li>
-                        <li><a href="#"><i class="mebu home-link"></i>Home</a></li>
+                        <li><a href="index.html"><i class="mebu home-link"></i>Home</a></li>
                     </ul>
                 </div>    
             </section>
