--- a/login&signup page/qcFirstLogin&SignupPage.html
+++ b/login&signup page/qcFirstLogin&SignupPage.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Welcome to qcFirst, Please Login or Sign-Up the Account.</title>
-        <link rel="stylesheet" href="login&signup page/LS_style.css">
+        <link rel="stylesheet" href="LS_style.css">
         <!-- make resposible page -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
