--- a/login&signup page/qcFirstLogin&SignupPage.html
+++ b/login&signup page/qcFirstLogin&SignupPage.html
@@ -38,14 +38,14 @@
                         <div class="field">
                             <input type="password" placeholder="Password" minlength="8" maxlength="12" title="The length has to be 8-12" required>
                         </div>
-                        <div class="forget-password"><a href="#"><img src="login&signup page/small Q.png" alt="smallQ">Forget Password?</a></a></div>
+                        <div class="forget-password"><a href="#"><img src="../small Q.png" alt="smallQ">Forget Password?</a></a></div>
                         <!-- login buttom -->
                         <div class="field">
                             <input type="submit" value="Login">
                         </div>
                         <!-- second sign up buttom -->
-                        <div class="sign-link"><img src="login&signup page/small Q.png" alt="smallQ">Don't have an account? <a href="#">Click here to sign up!</a></div>
-                        <div class="bottom_pic"><img src="login&signup page/background.jpg" alt="background"></div>
+                        <div class="sign-link"><img src="../small Q.png" alt="smallQ">Don't have an account? <a href="#">Click here to sign up!</a></div>
+                        <div class="bottom_pic"><img src="../background.jpg" alt="background"></div>
                     </form>
                     <!-- create a sign up form. asking inputs: fullname, email, qcID, password, and confirmed password . The data stored place is not defined yet-->
                     <form action="TODO" class="signupForm">
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </div>
-        <script src="login&signup page/LS_script.js"></script>
+        <script src="..e/LS_script.js"></script>
     </body>
 </html>
 
