--- a/login&signup page/qcFirstLogin&SignupPage.html
+++ b/login&signup page/qcFirstLogin&SignupPage.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </div>
-        <script src="..e/LS_script.js"></script>
+        <script src="../LS_script.js"></script>
     </body>
 </html>
 
