--- a/login&signup page/qcFirstLogin&SignupPage.html
+++ b/login&signup page/qcFirstLogin&SignupPage.html
@@ -73,6 +73,8 @@
             </div>
         </div>
         <script src="../LS_script.js"></script>
+    <div><a href="#">Temporary Link To Instructor Page</a></a></div>
+    <div><a href="#">Temporary Link To Student Page</a></a></div>
     </body>
 </html>
 
