--- a/login&signup page/qcFirstLogin&SignupPage.html
+++ b/login&signup page/qcFirstLogin&SignupPage.html
@@ -38,7 +38,7 @@
                         <div class="field">
                             <input type="password" placeholder="Password" minlength="8" maxlength="12" title="The length has to be 8-12" required>
                         </div>
-                        <div class="forget-password"><a href="#"><img src="../small Q.png" alt="smallQ">Forget Password?</a></a></div>
+                        <div class="forget-password"><a href="#"><img src="login&signup page/small Q.png" alt="smallQ">Forget Password?</a></a></div>
                         <!-- login buttom -->
                         <div class="field">
                             <input type="submit" value="Login">
