--- a/login&signup page/qcFirstLogin&SignupPage.html
+++ b/login&signup page/qcFirstLogin&SignupPage.html
@@ -44,8 +44,8 @@
                             <input type="submit" value="Login">
                         </div>
                         <!-- second sign up buttom -->
-                        <div class="sign-link"><img src="../small Q.png" alt="smallQ">Don't have an account? <a href="#">Click here to sign up!</a></div>
-                        <div class="bottom_pic"><img src="../background.jpg" alt="background"></div>
+                        <div class="sign-link"><img src="login&signup page/small Q.png" alt="smallQ">Don't have an account? <a href="#">Click here to sign up!</a></div>
+                        <div class="bottom_pic"><img src="../login&signup page/background.jpg" alt="background"></div>
                     </form>
                     <!-- create a sign up form. asking inputs: fullname, email, qcID, password, and confirmed password . The data stored place is not defined yet-->
                     <form action="TODO" class="signupForm">
