--- a/login&signup page/qcFirstLogin&SignupPage.html
+++ b/login&signup page/qcFirstLogin&SignupPage.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Welcome to qcFirst, Please Login or Sign-Up the Account.</title>
-        <link rel="stylesheet" href="login&signup page/LS_style.css">
+        <link rel="stylesheet" href="../login&signup page/LS_style.css">
         <!-- make resposible page -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -38,13 +38,13 @@
                         <div class="field">
                             <input type="password" placeholder="Password" minlength="8" maxlength="12" title="The length has to be 8-12" required>
                         </div>
-                        <div class="forget-password"><a href="#"><img src="login&signup page/small Q.png" alt="smallQ">Forget Password?</a></a></div>
+                        <div class="forget-password"><a href="#"><img src="../login&signup page/small Q.png" alt="smallQ">Forget Password?</a></a></div>
                         <!-- login buttom -->
                         <div class="field">
                             <input type="submit" value="Login">
                         </div>
                         <!-- second sign up buttom -->
-                        <div class="sign-link"><img src="login&signup page/small Q.png" alt="smallQ">Don't have an account? <a href="#">Click here to sign up!</a></div>
+                        <div class="sign-link"><img src="../login&signup page/small Q.png" alt="smallQ">Don't have an account? <a href="#">Click here to sign up!</a></div>
                         <div class="bottom_pic"><img src="../login&signup page/background.jpg" alt="background"></div>
                     </form>
                     <!-- create a sign up form. asking inputs: fullname, email, qcID, password, and confirmed password . The data stored place is not defined yet-->
