--- a/login&signup page/qcFirstLogin&SignupPage.html
+++ b/login&signup page/qcFirstLogin&SignupPage.html
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </div>
-        <script src="../LS_script.js"></script>
+        <script src="../login&signup page/LS_script.js"></script>
     <div><a href="#">Temporary Link To Instructor Page</a></a></div>
     <div><a href="#">Temporary Link To Student Page</a></a></div>
     </body>
