--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <thead>
                                 <tr>
                                     <th class="item">#</th>
-                                    <th class="item">Description</th>
+                                    <th class="item">News</th>
                                     <th class="item">Date</th>
                                 </tr>
                                 </thead>
