--- a/login&signup page/qcFirstLogin&SignupPage.html
+++ b/login&signup page/qcFirstLogin&SignupPage.html
@@ -31,7 +31,7 @@
                 <!-- inner includes login form and sign up form -->
                 <div class="form-inner">
                     <!-- create a login form. asking inputs: email and password. The data stored place is not defined yet-->
-                    <form action="TODO" class="loginForm">
+                    <form action="#" class="loginForm">
                         <div class="field">
                             <input type="email" placeholder="Email" required>
                         </div>
@@ -45,7 +45,7 @@
                         </div>
                         <!-- second sign up buttom -->
                         <div class="sign-link"><img src="../login&signup page/small Q.png" alt="smallQ">Don't have an account? <a href="#">Click here to sign up!</a></div>
-                        <div><a href="instructor's page/instructor's page.html">Temporary Link To Instructor Page</a></a></div>
+                        <div><a href="../instructor's page/instructor's page.html">Temporary Link To Instructor Page</a></a></div>
                         <div><a href="#">Temporary Link To Student Page</a></a></div>
                         <div class="bottom_pic"><img src="../login&signup page/background.jpg" alt="background"></div>
                     </form>
