--- a/instructor's page/instructor's page.html
+++ b/instructor's page/instructor's page.html
@@ -22,7 +22,7 @@
                     <header><img src="../instructor's page/small Q.png" alt="samllQ"> Menu</header>
                     <ul>
                         <li><a href="#"><i class="menu course-management-link"></i>Course Management</a></li>
-                        <li><a href="../index.html"><i class="mebu home-link"></i>Home</a></li>
+                        <li><a href="https://sheisol310.github.io/qcFirst.github.io/"><i class="mebu home-link"></i>Home</a></li>
                     </ul>
                 </div>    
             </section>
