--- a/course management/course management.html
+++ b/course management/course management.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Welcome to Course Management System</title>
-        <link rel="stylesheet" href="course management_style.css">
+        <link rel="stylesheet" href="../course management/course management_style.css">
         <!-- make resposible page -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -12,14 +12,14 @@
         <div class="container">
 
             <section id="topbar">
-                <div class="logo"><img src="temperary logo.jpg" alt="logo"></div>
+                <div class="logo"><img src="../course management/temperary logo.jpg" alt="logo"></div>
                 <div class="welcome"><h1>Welcome to Course Management System.</h1></div>
                 
             </section>
 
             <section id="leftbar">
                 <div class="sidebar">
-                    <header><img src="small Q.png" alt="samllQ"> Menu</header>
+                    <header><img src="../course management/small Q.png" alt="samllQ"> Menu</header>
                     <ul>
                         <li><a href="#"><i class="menu search-link"></i>Course Setup</a></li>
                         <li><a href="#"><i class="mebu home-link"></i>Home</a></li>
@@ -32,7 +32,7 @@
                     <div>Hi, Professor Brad Pitt. </div>
                     <div>Today is : <span id="datetime"></span></div>
                 </div>
-                <img class="background" src="campus pic.jpg" alt="">
+                <img class="background" src="../course management/campus pic.jpg" alt="">
                 <div class="course_list">
                     <div class="course-container">
                         <h2>Your Current Course Schedule: </h2>
@@ -96,7 +96,7 @@
             </section>
         </div><!--end of container-->
 
-        <script src="course management_script.js"></script>
+        <script src="../course management/course management_script.js"></script>
 
     </body>
 </html>
