--- a/courseSetUp/courseSetUp.html
+++ b/courseSetUp/courseSetUp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Adding a course here......</title>
-    <link rel="stylesheet" href="courseSetUp.css">
+    <link rel="stylesheet" href="../courseSetUp/courseSetUp.css">
     <!-- make resposible page -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -12,14 +12,14 @@
 <div class="container">
 
     <section id="topbar">
-        <div class="logo"><img src="temperary logo.jpg" alt="logo"></div>
+        <div class="logo"><img src="../courseSetUp/temperary logo.jpg" alt="logo"></div>
         <div class="welcome"><h1>Welcome to Course Set-Up</h1></div>
 
     </section>
 
     <section id="leftbar">
         <div class="sidebar">
-            <header><img src="small Q.png" alt="samllQ"> Menu</header>
+            <header><img src="../courseSetUp/small Q.png" alt="samllQ"> Menu</header>
             <ul>
                 <li><a href="#"><i class="menu course-manage"></i>Course Management</a></li>
                 <li><a href="#"><i class="mebu home-link"></i>Home</a></li>
@@ -32,7 +32,7 @@
             <div>Hi, Professor: Wallace Wells. </div>
             <div>Today is : <span id="datetime"></span></div>
         </div>
-        <img class="background" src="campus pic.jpg" alt="">
+        <img class="background" src="../courseSetUp/campus pic.jpg" alt="">
         <div class="course_list">
             <div class="course-container">
                 <h2>Course Set-Up: </h2>
@@ -64,7 +64,7 @@
     </section>
 </div><!--end of container-->
 
-<script src="courseSetUp_script.js"></script>
+<script src="../courseSetUp/courseSetUp_script.js"></script>
 
 </body>
 </html>
