--- a/enroll management/enrollment.html
+++ b/enroll management/enrollment.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Register Your Course Here....</title>
-        <link rel="stylesheet" href="enrollment_style.css">
+        <link rel="stylesheet" href="../enroll management/enrollment_style.css">
         <!-- make resposible page -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -11,13 +11,13 @@
         <div class="container">
             <!--Set up top bar of page-->
             <section id="topbar">
-                <div class="logo"><img src="temperary logo.jpg" alt="logo"></div>
+                <div class="logo"><img src="../enroll management/temperary logo.jpg" alt="logo"></div>
                 <div class="welcome"><h1>Welcome To Enrollment System.</h1></div>
             </section>
             <!--Set up side menu bar on left side of page -->
             <section id="leftbar">
                 <div class="sidebar">
-                    <header><img src="small Q.png" alt="samllQ"> Menu</header>
+                    <header><img src="../enroll management/small Q.png" alt="samllQ"> Menu</header>
                     <ul>
                         <li><a href="#"><i class="menu search-link"></i>Search Course</a></li>
                         <li><a href="#"><i class="menu shopping-linl"></i>Shopping Cart</a></li>
@@ -32,7 +32,7 @@
                     <div>Today is : <span id="datetime"></span></div>
                 </div>
                 <!--Have Image of campus in the background pof the website-->
-                <img class="background" src="campus pic.jpg" alt="">
+                <img class="background" src="../enroll management/campus pic.jpg" alt="">
                 <div class="course_list">
                     <div class="course-container">
                         <h2>Current Course Schedule: </h2>
@@ -96,7 +96,7 @@
             </section>
         </div><!--end of container-->
 
-        <script src="enrollment_script.js"></script>
+        <script src="../enroll management/enrollment_script.js"></script>
 
     </body>
 </html>
