--- a/shopping cart/shoppingCart.html
+++ b/shopping cart/shoppingCart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Shopping Cart</title>
-    <link rel="stylesheet" href="shopping cart_style.css">
+    <link rel="stylesheet" href="../shopping cart/shopping cart_style.css">
     <!-- make resposible page -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -12,14 +12,14 @@
 <div class="container">
 
     <section id="topbar">
-        <div class="logo"><img src="temperary logo.jpg" alt="logo"></div>
+        <div class="logo"><img src="../shopping cart/temperary logo.jpg" alt="logo"></div>
         <div class="welcome"><h1>Shopping Cart</h1></div>
 
     </section>
     <!-- Bar with menu options on left side of page(on top if on phone)-->
     <section id="leftbar">
         <div class="sidebar">
-            <header><img src="small Q.png" alt="samllQ"> Menu</header>
+            <header><img src="../shopping cart/small Q.png" alt="samllQ"> Menu</header>
             <ul>
                 <li><a href="#"><i class="menu enrollment-link"></i>Enrollment</a></li>
                 <li><a href="#"><i class="menu course-search"></i>Search Course</a></li>
@@ -33,7 +33,7 @@
             <div>Hi, Student: 8564289. Name: Tom Cruise. </div>
             <div>Today is : <span id="datetime"></span></div>
         </div>
-        <img class="background" src="campus pic.jpg" alt="">
+        <img class="background" src="../shopping cart/campus pic.jpg" alt="">
         <div class="course_list">
             <div class="course-container">
                 <h2>Select a course and choose to remove or enroll: </h2>
@@ -50,7 +50,7 @@
     </section>
 </div><!--end of container-->
 
-<script src="shopping cart_script.js"></script>
+<script src="../shopping cart/shopping cart_script.js"></script>
 
 </body>
 </html>
