--- a/enroll management/enrollment.html
+++ b/enroll management/enrollment.html
@@ -20,8 +20,8 @@
                     <header><img src="../enroll management/small Q.png" alt="samllQ"> Menu</header>
                     <ul>
                         <li><a href="#"><i class="menu search-link"></i>Search Course</a></li>
-                        <li><a href="#"><i class="menu shopping-linl"></i>Shopping Cart</a></li>
-                        <li><a href="#"><i class="mebu home-link"></i>Home</a></li>
+                        <li><a href="shopping cart/shoppingCart.html"><i class="menu shopping-linl"></i>Shopping Cart</a></li>
+                        <li><a href="index.html"><i class="mebu home-link"></i>Home</a></li>
                     </ul>
                 </div>    
             </section>
