--- a/course search/courseSearch.html
+++ b/course search/courseSearch.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Search Courses</title>
-    <link rel="stylesheet" href="course search_style.css">
+    <link rel="stylesheet" href="../course search/course search_style.css">
     <!-- make resposible page -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -11,13 +11,13 @@
 <div class="container">
     <!--Set up top bar of page-->
     <section id="topbar">
-        <div class="logo"><img src="temperary logo.jpg" alt="logo"></div>
+        <div class="logo"><img src="../course search/temperary logo.jpg" alt="logo"></div>
         <div class="welcome"><h1>Course Search</h1></div>
     </section>
     <!-- Bar with menu options on left side of page(on top if on phone)-->
     <section id="leftbar">
         <div class="sidebar">
-            <header><img src="small Q.png" alt="samllQ"> Menu</header>
+            <header><img src="../course search/small Q.png" alt="samllQ"> Menu</header>
             <ul>
                 <li><a href="#"><i class="menu enrollment-link"></i>Enrollment</a></li>
                 <li><a href="#"><i class="menu shopping-linl"></i>Shopping Cart</a></li>
@@ -32,7 +32,7 @@
             <div>Today is : <span id="datetime"></span></div>
         </div>
         <!--Have Image of campus in the background pof the website-->
-        <img class="background" src="campus pic.jpg" alt="">
+        <img class="background" src="../course search/campus pic.jpg" alt="">
         <div class="course_list">
             <div class="course-container">
                 <h2>Search for Courses to add to shopping cart: </h2>
@@ -65,7 +65,7 @@
     </section>
 </div><!--end of container-->
 
-<script src="course search_script.js"></script>
+<script src="../course search/course search_script.js"></script>
 
 </body>
 </html>
