--- a/login&signup page/qcFirstLogin&SignupPage.html
+++ b/login&signup page/qcFirstLogin&SignupPage.html
@@ -46,7 +46,7 @@
                         <!-- second sign up buttom -->
                         <div class="sign-link"><img src="../login&signup page/small Q.png" alt="smallQ">Don't have an account? <a href="#">Click here to sign up!</a></div>
                         <div><a href="../instructor's page/instructor's page.html">Temporary Link To Instructor Page</a></a></div>
-                        <div><a href="student's page/student's page.html">Temporary Link To Student Page</a></a></div>
+                        <div><a href="../student's page/student's page.html">Temporary Link To Student Page</a></a></div>
                         <div class="bottom_pic"><img src="../login&signup page/background.jpg" alt="background"></div>
                     </form>
                     <!-- create a sign up form. asking inputs: fullname, email, qcID, password, and confirmed password . The data stored place is not defined yet-->
