--- a/instructor's page/instructor's page.html
+++ b/instructor's page/instructor's page.html
@@ -21,8 +21,8 @@
                 <div class="sidebar">
                     <header><img src="../instructor's page/small Q.png" alt="samllQ"> Menu</header>
                     <ul>
-                        <li><a href="course management/course management.html"><i class="menu course-management-link"></i>Course Management</a></li>
-                        <li><a href="https://sheisol310.github.io/qcFirst.github.io/"><i class="mebu home-link"></i>Home</a></li>
+                        <li><a href="../course management/course management.html"><i class="menu course-management-link"></i>Course Management</a></li>
+                        <li><a href="https://sheisol310.github.io/qcFirst-Web//"><i class="mebu home-link"></i>Home</a></li>
                     </ul>
                 </div>    
             </section>
