--- a/course management/course management.html
+++ b/course management/course management.html
@@ -21,8 +21,8 @@
                 <div class="sidebar">
                     <header><img src="../course management/small Q.png" alt="samllQ"> Menu</header>
                     <ul>
-                        <li><a href="courseSetUp/courseSetUp.html"><i class="menu search-link"></i>Course Setup</a></li>
-                        <li><a href="index.html"><i class="mebu home-link"></i>Home</a></li>
+                        <li><a href="../courseSetUp/courseSetUp.html"><i class="menu search-link"></i>Course Setup</a></li>
+                        <li><a href="../index.html"><i class="mebu home-link"></i>Home</a></li>
                     </ul>
                 </div>    
             </section>
