--- a/courseSetUp/courseSetUp.html
+++ b/courseSetUp/courseSetUp.html
@@ -21,8 +21,8 @@
         <div class="sidebar">
             <header><img src="../courseSetUp/small Q.png" alt="samllQ"> Menu</header>
             <ul>
-                <li><a href="#"><i class="menu course-manage"></i>Course Management</a></li>
-                <li><a href="#"><i class="mebu home-link"></i>Home</a></li>
+                <li><a href="https://sheisol310.github.io/qcFirst-Web/course%20management/course%20management.html"><i class="menu course-manage"></i>Course Management</a></li>
+                <li><a href="../index.html"><i class="mebu home-link"></i>Home</a></li>
             </ul>
         </div>
     </section>
