--- a/shopping cart/shoppingCart.html
+++ b/shopping cart/shoppingCart.html
@@ -21,9 +21,9 @@
         <div class="sidebar">
             <header><img src="../shopping cart/small Q.png" alt="samllQ"> Menu</header>
             <ul>
-                <li><a href="#"><i class="menu enrollment-link"></i>Enrollment</a></li>
-                <li><a href="#"><i class="menu course-search"></i>Search Course</a></li>
-                <li><a href="#"><i class="mebu home-link"></i>Home</a></li>
+                <li><a href="../enroll management/enrollment.html"><i class="menu enrollment-link"></i>Enrollment</a></li>
+                <li><a href="../course search/courseSearch.html"><i class="menu course-search"></i>Search Course</a></li>
+                <li><a href="../index.html"><i class="mebu home-link"></i>Home</a></li>
             </ul>
         </div>
     </section>
