--- a/course search/courseSearch.html
+++ b/course search/courseSearch.html
@@ -19,9 +19,9 @@
         <div class="sidebar">
             <header><img src="../course search/small Q.png" alt="samllQ"> Menu</header>
             <ul>
-                <li><a href="#"><i class="menu enrollment-link"></i>Enrollment</a></li>
-                <li><a href="#"><i class="menu shopping-linl"></i>Shopping Cart</a></li>
-                <li><a href="#"><i class="mebu home-link"></i>Home</a></li>
+                <li><a href="../enroll management/enrollment.html"><i class="menu enrollment-link"></i>Enrollment</a></li>
+                <li><a href="../shopping cart/shoppingCart.html"><i class="menu shopping-linl"></i>Shopping Cart</a></li>
+                <li><a href="../index.html"><i class="mebu home-link"></i>Home</a></li>
             </ul>
         </div>
     </section>
