--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
         <!-- make resposible page -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-
     <body>
         <div class="container">
-
+        <!--Sets up the top bar of webpage-->
             <section id="topbar">
                 <div class="logo"><img src="index_img/temperary logo.jpg" alt="logo"></div>
-                <div class="welcome"><h1>Welcome To qcFirst Course & Enroll System.</h1></div>
-                
+                <div class="welcome"><h1>Welcome To qcFirst Course & Enroll System.</h1></div> 
             </section>
-
+            <!--Sets up the left side menu bar-->
             <section id="leftbar">
                 <div class="sidebar">
                     <header><img src="index_img/small Q.png" alt="samllQ"> Menu</header>
@@ -26,12 +24,13 @@
                     </ul>
                 </div>    
             </section>
-
+            <!--"main bar" displays current time and greets user-->
             <section id="mainbar">            
                 <div class="weclome_Info">
                     <div>Hi, Visitor.  </div>
                     <div>Today is : <span id="datetime"></span></div>
                 </div>
+                <!--Campus picture as background of page-->
                 <img class="background" src="index_img/campus pic.jpg" alt="">
                     <div class="mainbar-container">
                         <h2>Announcement: </h2>
@@ -53,17 +52,14 @@
                                 </tbody>
                             </table>
                         </div>
-
+                        <!--Displays pictures of campus as slides-->
                         <div class="photo-disply">
                             <!-- going to display pictures in sldies -->
                             <h2>Corner of Campus</h2>   
-
                         </div>
                     </div>                 
             </section>
         </div><!--end of container-->
-
         <script src="index_script.js"></script>
-
     </body>
 </html>
